updated(8-places.css) to align the price div correctly.

--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,13 +1,15 @@
 .places {
-  display: flex;
+  /*display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: center;*/
+  text-align: center;
 }
 
 .places h1 {
   font-size: 30px;
-  align-self: flex-start;
-  width: 100%;
+  text-align: left;
+  /*align-self: flex-start;
+  width: 100%;*/
 }
 
 .places article {
@@ -16,9 +18,60 @@
   border-radius: 4px;
   padding: 20px;
   margin: 20px;
+  display: inline-block;
+  text-align: left;
+  position: relative;
 }
 
 .places article h2 {
   font-size: 30px;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.places article .price_by_night {
+  color: #FF5A5F;
+  border: 4px solid #FF5A5F;
+  border-radius: 50%;
+  min-width: 60px;
+  height: 60px;
+  font-size: 30px;
+  padding: 5px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  text-align: center;
+  line-height: 60px;
+  /* display: inline-block;*/
+  /*position: absolute;*/
+}
+
+.information {
+  height: 80px;
+  border-top: 1px solid #DDDDDD;
+  border-bottom: 1px solid #DDDDDD;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.max_guest {
+  width: 100px;
+  background: url("../images/icon_group.png") no-repeat center;
+  padding-top: 60px;
+  text-align: center;
+}
+
+.number_rooms {
+  width: 100px;
+  background: url("../images/icon_bed.png") no-repeat center;
+  padding-top: 60px;
+  text-align: center;
+}
+
+.number_bathrooms {
+  width: 100px;
+  background: url("../images/icon_bath.png") no-repeat center;
+  padding-top: 60px;
   text-align: center;
 }
